tests/testfiles/passing/invalid_identifiers/keyword_as_id_break.c
/* Keyword as identifier: break */
int main() {
    int break;
}